--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,8 +1,6 @@
-
-name: Deploy to EC2
+name: Deploy on EC2
 
 on: push
-   
 
 jobs:
   deploy:
@@ -18,28 +16,47 @@ jobs:
           npm run build
 
       - name: Set up SSH
-        run: | 
-          mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/meinPrivateKey
-          chmod 600 ~/.ssh/meinPrivateKey
-
-
-      - name: SSH Connection to EC2
         run: |
-            ssh -i ~/.ssh/meinPrivateKey ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
-                sudo yum update -y
-                sudo yum upgrade -y
-                sudo yum install -y nodejs
-                sudo npm install -g serve
-            ENDSSH
-    
+          mkdir -p ~/.ssh
+          echo "${{secrets.SSH_KEY}}" > ~/.ssh/meinPrivateKey
+          chmod 600 ~/.ssh/meinPrivateKey
+          ssh-keyscan -H ${{secrets.EC2_IP}} >> ~/.ssh/known_hosts
+
+      - name: SSH Connection
+        run: |
+          ssh -i ~/.ssh/meinPrivateKey ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
+            sudo yum update -y
+            sudo yum upgrade -y
+            sudo yum install -y nodejs
+            sudo npm install -g serve
+          ENDSSH
+
       - name: Copy build to EC2
         run: scp -i ~/.ssh/meinPrivateKey -r build ec2-user@${{secrets.EC2_IP}}:/home/ec2-user/build
-    
+
       - name: Start Calculator on EC2
         run: |
-            ssh -i ~/.ssh/meinPrivateKey ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
-                nohupsudo serve -l 80 -s ~/build &
-            ENDSSH
+          ssh -i ~/.ssh/meinPrivateKey ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
+            nohup sudo serve -l 80 -s ~/build &
+          ENDSSH
+
+# sudo serve -l 80 -s ~/build
+# Dieser Befehl startet den serve-Prozess im Vordergrund.
+# Der Server läuft nur so lange, wie die SSH-Sitzung aktiv ist.
+# Wenn du dich von der SSH-Sitzung abmeldest oder die Verbindung
+# unterbrichst, wird der Server gestoppt.
+
+# ------------------------------------------
+
+# nohup sudo serve -l 80 -s ~/build &
+# Der Befehl startet den serve-Prozess im Hintergrund,
+# selbst wenn die SSH-Sitzung geschlossen wird.
+# nohup (No Hang Up) sorgt dafür, dass der Prozess weiterläuft,
+# auch wenn du die SSH-Verbindung trennst.
+# Das & am Ende des Befehls weist an, den Prozess im
+# Hintergrund zu starten.
+# Dadurch kannst du die SSH-Verbindung trennen, und der Server
+# bleibt weiterhin aktiv.
+
     
           
