--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
       - name: Start Calculator on EC2
         run: |
           ssh -t -o ServerAliveInterval=60 -i ~/.ssh/meinPrivateKey ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
-            nohup sudo serve -l 8080 -s ~/build & disown
+            screen -dmS server_session sudo serve -l 8080 -s ~/build & disown
           ENDSSH
 
 
