--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,7 +12,7 @@ jobs:
       - name: Checkout Code
         uses: actions/checkout@v2
 
-      - name: 
+      - name: Docker Build
         run: |
           docker build -t "${{secrets.DOCKERHUB_USERNAME}}"/calculatorappmeins:latest
 
