--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
 
       - name: Docker Build
         run: |
-          docker build -t "${{secrets.DOCKERHUB_USERNAME}}"/calculatorappmeins:latest
+          docker build -t "${{secrets.DOCKERHUB_USERNAME}}"/calculatorappmeins:latest .
 
       - name: Docker Login
         run: echo "${{secrets.DOCKERHUB_TOKEN}}" | docker login -u "${{secrets.DOCKERHUB_USERNAME}}" --password-stdin
