--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -35,10 +35,10 @@ jobs:
 
       - name: SSH Connection to EC2 instance
         run: |
-          ssh -i ~/.ssh/meinPrivateKey ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
+          ssh -i ~/.ssh/meinPrivateKey -o StrictHostKeyChecking=no ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
               sudo yum update -y
               sudo yum upgrade -y
-              sudo systemctl start docker -y
+              sudo systemctl start docker 
               sudo systemctl enable docker.service
               sudo usermod -aG docker ec2-user
               docker pull "${{secrets.DOCKERHUB_USERNAME}}"/calculatorappmeins:latest
@@ -53,7 +53,7 @@ jobs:
 
       - name: Clean Up SSH Key File
         run: |
-          rm meinPrivateKey
+          rm ~/.ssh/meinPrivateKey
 
       
 
