--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,13 +28,16 @@ jobs:
 
       - name: Set up SSH
         run: |
+          set -x
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY}}" > ~/.ssh/meinPrivateKey
+          echo "${{ secrets.SSH_PRIVATE_KEY}}" | tr -d '\r' > ~/.ssh/meinPrivateKey
           chmod 600 ~/.ssh/meinPrivateKey
           ssh-keyscan -H ${{secrets.EC2_IP}} >> ~/.ssh/known_hosts
+          set +x
 
       - name: SSH Connection to EC2 instance
         run: |
+        
           ssh -i ~/.ssh/meinPrivateKey -o StrictHostKeyChecking=no ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
               sudo yum update -y
               sudo yum upgrade -y
