--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,14 +14,14 @@ jobs:
 
       - name: Docker Build
         run: |
-          docker build -t "${{secrets.DOCKERHUB_USERNAME}}"/calculatorappmeins:latest .
+          docker build -t "${{secrets.DOCKERHUB_USERNAME}}"/calculatorapp2meins:latest .
 
       - name: Docker Login
         run: echo "${{secrets.DOCKERHUB_TOKEN}}" | docker login -u "${{secrets.DOCKERHUB_USERNAME}}" --password-stdin
 
       - name: Docker Push
         run: |
-          docker push "${{secrets.DOCKERHUB_USERNAME}}"/calculatorappmeins:latest
+          docker push "${{secrets.DOCKERHUB_USERNAME}}"/calculatorapp2meins:latest
 
 
           
@@ -30,35 +30,36 @@ jobs:
         run: |
           set -x
           mkdir -p ~/.ssh
-          echo "${{ secrets.SSH_PRIVATE_KEY}}" | tr -d '\r' > ~/.ssh/meinPrivateKey
-          chmod 600 ~/.ssh/meinPrivateKey
+          echo "${{ secrets.SSH_PRIVATE_KEY}}" | tr -d '\r' > ~/.ssh/meinNeuerKey
+          chmod 600 ~/.ssh/meinNeuerKey
           ssh-keyscan -H ${{secrets.EC2_IP}} >> ~/.ssh/known_hosts
           set +x
 
       - name: SSH Connection to EC2 instance
         run: |
         
-          ssh -i ~/.ssh/meinPrivateKey -o StrictHostKeyChecking=no ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
+          ssh -i ~/.ssh/meinNeuerKey -o StrictHostKeyChecking=no ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
               sudo yum update -y
               sudo yum upgrade -y
               sudo systemctl start docker 
               sudo systemctl enable docker.service
               sudo usermod -aG docker ec2-user
-              docker pull "${{secrets.DOCKERHUB_USERNAME}}"/calculatorappmeins:latest
+              docker pull "${{secrets.DOCKERHUB_USERNAME}}"/calculatorapp2meins:latest
 
           ENDSSH
 
       - name: Start Docker Container on EC2 instance
         run: |
-            ssh -i ~/.ssh/meinPrivateKey ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
+            ssh -i ~/.ssh/meinNeuerKey ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
                 docker run -d -p 80:3000 --name calculatorapp2 "${{secrets.DOCKERHUB_USERNAME}}"/calculatorappmeins
             ENDSSH
 
       - name: Clean Up SSH Key File
         run: |
-          rm ~/.ssh/meinPrivateKey
+          rm ~/.ssh/meinNeuerKey
 
       
+
 
 
 
