--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,7 +39,7 @@ jobs:
         run: |
         
           ssh -i ~/.ssh/meinNeuerKey -o StrictHostKeyChecking=no ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
-
+              amazon-linux-extras enable docker
               sudo yum install -y docker
               sudo yum update -y
               sudo yum upgrade -y
