--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,7 +53,9 @@ jobs:
       - name: Start Docker Container on EC2 instance
         run: |
             ssh -i ~/.ssh/meinNeuerKey ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
-                docker run -d -p 80:3000 --name calculatorapp2meins "${{secrets.DOCKERHUB_USERNAME}}"/calculatorapp2meins
+                docker stop calculatorapp2meins
+                docker rm calculatorapp2meins
+                docker run -d -p 80:80 --name calculatorapp2meins "${{secrets.DOCKERHUB_USERNAME}}"/calculatorapp2meins
             ENDSSH
 
       - name: Clean Up SSH Key File
