dockerstopp dockerrm2 Port80

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -53,8 +53,8 @@ jobs:
       - name: Start Docker Container on EC2 instance
         run: |
             ssh -i ~/.ssh/meinNeuerKey ec2-user@${{secrets.EC2_IP}} << 'ENDSSH'
-                docker stop calculatorapp2meins
-                docker rm calculatorapp2meins
+                docker stop calculatorapp2meins || true
+                docker rm calculatorapp2meins || true
                 docker run -d -p 80:80 --name calculatorapp2meins "${{secrets.DOCKERHUB_USERNAME}}"/calculatorapp2meins
             ENDSSH
 
@@ -63,7 +63,7 @@ jobs:
           rm ~/.ssh/meinNeuerKey
 
 
-          
+
 
       
 
