--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,7 @@ jobs:
               sudo systemctl start docker 
               sudo systemctl enable docker.service
               sudo usermod -aG docker ec2-user
+              newgrp docker <<DOCKERCOMMANDS
               docker pull "${{secrets.DOCKERHUB_USERNAME}}"/calculatorapp2meins:latest
 
           ENDSSH
